--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/dialogs": "^5.26.0",
     "@ionic-native/qr-scanner": "^5.26.0",
+    "@ionic-native/screen-orientation": "^5.26.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.2.0",
+    "cordova-android": "8.1.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-qrscanner": "^3.0.1",
+    "cordova-plugin-screen-orientation": "^3.0.2",
+    "cordova-sqlite-storage": "^5.0.0",
+    "es6-promise-plugin": "^4.2.2",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -72,10 +78,13 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-screen-orientation": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
